# protocol

./: .release-please-manifest.json  AGENTS.md  CLAUDE.md  PLAN.md  README.md  conductor.json  http-push-sse-protocol.md  llms.md  package.json  pnpm-lock.yaml  protocol-e2ee.md  protocol.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
examples/excalidraw-example/: package.json  server.ts
examples/excalidraw-example/src/hooks/: useLoroSync.ts
prd/: 000-protocol-v1.md
rust/: LICENSE
rust/loro-protocol/: Cargo.toml  README.md
rust/loro-protocol/src/: bytes.rs  elo.rs  encoding.rs  lib.rs  protocol.rs
rust/loro-protocol/tests/: elo.rs  elo_normative_vector.rs  js_snapshots.rs
rust/loro-websocket-client/: Cargo.toml  README.md
rust/loro-websocket-client/examples/: elo_index_client.rs
rust/loro-websocket-client/src/: lib.rs
rust/loro-websocket-server/: Cargo.toml  README.md
rust/loro-websocket-server/examples/: simple-server.rs
rust/loro-websocket-server/src/: lib.rs
rust/loro-websocket-server/tests/: close_hook.rs  e2e.rs  edit_loro_doc.rs  elo_accept_broadcast.rs  elo_cross_lang.rs  elo_fragment_reassembly.rs  handshake_auth.rs  handshake_cookies.rs  join_denied.rs  join_snapshot_load.rs  readonly_receive.rs  reject_update_without_join.rs  update_hook.rs
