[package]
name = "loro-websocket-client"
version = "0.1.0"
edition = "2021"
description = "Async WebSocket client for the Loro protocol"
license = "MIT"
repository = "https://github.com/loro-dev/protocol"
readme = "README.md"
keywords = ["crdt", "websocket", "sync", "loro", "client"]
categories = ["network-programming", "asynchronous", "web-programming::websocket"]

[lib]
name = "loro_websocket_client"
path = "src/lib.rs"

[dependencies]
loro-protocol = { version = "0.1.0", path = "../loro-protocol" }
tokio = { version = "1", features = ["rt", "macros", "net", "time", "sync"] }
tokio-tungstenite = "0.27"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
loro = "1"
aes-gcm = { version = "0.10", features = ["aes"] }
async-trait = "0.1"
